--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <animal-list></animal-list>
-    <script src="./Component.js"></script>
+    <script src="./script.js" type="module"></script>
 </body>
 </html>
